--- a/index.html
+++ b/index.html
@@ -3,27 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My API Documentation</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.52.5/swagger-ui.css">
+    <title>Welcome to My API</title>
 </head>
 <body>
-    <div id="swagger-ui"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.52.5/swagger-ui-bundle.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/3.52.5/swagger-ui-standalone-preset.js"></script>
-    <script>
-        window.onload = function () {
-            // Swagger UI setup
-            const ui = SwaggerUIBundle({
-                url: "https://path-to-your-swagger-json/swagger.json", // Update this URL
-                dom_id: '#swagger-ui',
-                presets: [
-                    SwaggerUIBundle.presets.apis,
-                    SwaggerUIStandalonePreset
-                ],
-                layout: "StandaloneLayout"
-            });
-            window.ui = ui;
-        }
-    </script>
+    <h1>Welcome to My API</h1>
+    <p>To access the API documentation, please visit <a href="swagger-ui/index.html">Swagger UI</a>.</p>
 </body>
 </html>
